--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,45 @@ img {
   max-width: 100%;
   height: auto;
 }
+input,
+textarea {
+  outline: none;
+}
+/* анимация */
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  10%,
+  20% {
+    -webkit-transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+    transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg);
+  }
+
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+  }
+
+  40%,
+  60%,
+  80% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+/* ================================================ */
 /* ===container=== */
 .container {
   margin-left: auto;
@@ -62,25 +101,32 @@ img {
   padding-right: 15px;
   width: 1200px;
 }
-/* ================================================ */
-
 /* скрытые элементы */
-.vis-hidden {
+.vis-hidden,
+.policy-checkbox {
+  position: absolute;
   width: 1px;
   height: 1px;
-  visibility: hidden;
-  margin-top: -1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
-
+/* ========================================= */
 /* ===навигация сайта===, ===header=== */
-
 .header {
   border-bottom: 1px solid #ececec;
+  position: sticky;
+  top: -1px;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 99;
 }
 
 .main-nav {
   display: flex;
 }
+
 .contacts-ico {
   margin-right: 10px;
   fill: var(--primary-text-color);
@@ -142,19 +188,18 @@ img {
 }
 
 .nav-link.current {
-  color: var(--accent-color);
   position: relative;
-  overflow: hidden;
+  color: var(--accent-color);
 }
 
 .nav-link.current::after {
   content: '';
+  display: block;
   position: absolute;
   width: 100%;
   height: 4px;
   background-color: currentColor;
-  bottom: 0;
-  right: 0;
+  bottom: -1px;
   border-radius: 2px;
 }
 /* ============================================= */
@@ -201,7 +246,9 @@ img {
   margin-left: auto;
 }
 
-.hero-button {
+.hero-button,
+.submit-btn-ft,
+.submit-form-btn {
   border-radius: 4px;
   border: transparent;
   display: inline-block;
@@ -214,6 +261,7 @@ img {
   cursor: pointer;
   color: #fff;
   background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .hero-title {
@@ -235,6 +283,11 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms var(--timing-function),
+    visibility 250ms var(--timing-function);
+  z-index: 100;
 }
 
 .backdrop.is-hidden {
@@ -242,24 +295,35 @@ img {
   opacity: 0;
   pointer-events: none;
 }
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.3);
+}
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 528px;
-  height: 581px;
+  min-height: 581px;
+  padding: 40px;
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--timing-function);
 }
 /* ==================================== */
 
 /* кнопка модалки */
 .close-ico {
   position: absolute;
+  fill: #000;
+  transition: fill 250ms var(--timing-function);
+}
+.close-modal:hover .close-ico,
+.close-modal:focus .close-ico {
+  fill: var(--accent-color);
 }
 
 .close-modal {
@@ -277,6 +341,132 @@ img {
   cursor: pointer;
 }
 /* ========================================== */
+/* форма модального окна */
+.modal-form {
+  margin-top: 12px;
+}
+
+.modal-headline {
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+/* инпуты */
+.form-input,
+.form-message {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  padding: 12px 15px 12px 42px;
+  transition: border 250ms var(--timing-function);
+}
+
+.form-input:focus,
+.form-input:hover,
+.form-message:focus,
+.form-message:hover {
+  border: 1px solid var(--accent-color);
+}
+
+.form-input:focus + .form-input-icon,
+.form-input:hover + .form-input-icon {
+  fill: var(--accent-color);
+}
+.form-input-label {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  font-size: 12px;
+  position: relative;
+}
+.form-input-label.message {
+  margin-bottom: 20px;
+}
+
+.form-input-icon {
+  display: block;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  fill: var(--title-text-color);
+  transition: fill 250ms var(--timing-function);
+}
+/* ================================================ */
+/* textarea */
+.form-message {
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  line-height: 1.14;
+  resize: none;
+  height: 120px;
+  padding: 12px 16px;
+}
+
+.form-message::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+/* ================================================= */
+/*  */
+.policy-box {
+  font-size: 14px;
+  color: var(--primary-text-color);
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.policy-box a {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+/* ===кастомный чекбокс=== */
+
+.policy-checkbox:checked + .policy-box::before {
+  background-image: url(../images/icon-check.svg);
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-origin: border-box;
+}
+.policy-checkbox:hover + .policy-box::before,
+.policy-checkbox:focus + .policy-box::before {
+  border: 2px solid var(--accent-color);
+}
+
+.policy-box::before {
+  content: '';
+  display: block;
+  cursor: pointer;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  margin-right: 7px;
+  transition: border 250ms var(--timing-function);
+}
+
+/* кнопка ===отправить=== */
+.submit-form-btn {
+  padding: 10px 55px;
+  transition: box-shadow 250ms var(--timing-function);
+}
+.submit-form-btn:hover,
+.submit-form-btn:focus {
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.4);
+}
+
+/* ======================================= */
 /* заголовки секций студии */
 .section {
   padding: 94px 0;
@@ -359,26 +549,22 @@ img {
   margin-right: 0;
 }
 
-.work-img {
-  display: block;
-  z-index: 1;
-}
 /* основной стиль в .feat-title */
 .work-text {
-  padding: 27px 0;
-  text-align: center;
-  color: #fff;
-  /* position: absolute;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
   bottom: 0;
-  margin: 0; */
+  width: 100%;
+  height: 70px;
+  color: #fff;
   background-color: rgba(47, 48, 58, 0.8);
-  z-index: 2;
 }
-/* .work-thumb {
+.work-thumb {
   position: relative;
   overflow: hidden;
-} */
+}
 /* ======================================== */
 
 /* команда */
@@ -401,7 +587,7 @@ img {
   margin-left: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0 4px;
+  border-radius: 4px;
 }
 
 .team-title {
@@ -563,29 +749,34 @@ img {
   margin-top: -30px;
 }
 
-.port-img {
-  display: block;
-}
-
-.port-thumb::before {
-  display: inline-block;
-  overflow: hidden;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-color);
-  transform: translateY(-100%);
-  transition: transform 250ms var(--timing-function);
-}
-.port-link:hover .port-thumb::before,
-.port-link:focus .port-thumb::before {
-  transform: translateY(0);
-}
-
 .port-item a {
   color: var(--title-text-color);
 }
 
+/* ================================== */
+.port-thumb {
+  position: relative;
+  overflow: hidden;
+}
+.port-img {
+  display: block;
+}
+.port-overlay {
+  position: absolute;
+  padding: 63px 24px;
+  top: 0;
+  left: 0;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #fff;
+  background-color: rgba(33, 150, 243, 0.9);
+  width: 100%;
+  height: 100%;
+  transition: transform 250ms var(--timing-function);
+  transform: translateY(100%);
+}
+/* ========================================= */
 .port-item {
   cursor: pointer;
   flex-basis: calc(100% / 3 - 30px);
@@ -601,6 +792,10 @@ img {
 .port-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.port-link:hover .port-overlay,
+.port-link:focus .port-overlay {
+  transform: translateY(0);
 }
 
 .port-txt {
@@ -630,7 +825,7 @@ img {
   align-items: baseline;
 }
 .page-footer {
-  background: #2f303a;
+  background-color: #2f303a;
   padding: 60px 0;
 }
 
@@ -664,7 +859,8 @@ img {
   margin-bottom: 0;
 }
 /* ===соцсети=== футера */
-.soc-title-ft {
+.soc-title-ft,
+.mailing-title-ft {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -709,6 +905,59 @@ img {
 .soc-link-ft:focus {
   background-color: var(--accent-color);
 }
-
 /* ==================================== */
+/* рассылка (футер) */
+
+.mailing-ft {
+  margin-left: 93px;
+}
+
+.form-field-ft {
+  margin-top: 20px;
+  display: flex;
+  align-items: flex-end;
+}
+.input-ft {
+  color: rgba(255, 255, 255, 0.6);
+  padding: 15px 16px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+  transition: border 250ms var(--timing-function);
+}
+.input-ft:hover,
+.input-ft:focus {
+  border: 1px solid var(--accent-color);
+}
+#user_mail:not(placeholder-shown) {
+  color: #fff;
+}
+
+.submit-btn-ft {
+  align-items: center;
+  display: flex;
+  padding: 10px 29px;
+  margin-left: 12px;
+  transition: box-shadow 250ms var(--timing-function);
+}
+.submit-btn-ft:hover,
+.submit-btn-ft:focus {
+  box-shadow: 0px 0px 2px #fff, 0px 0px 4px #fff;
+}
+
+.icon-send-ft {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+  fill: #fff;
+}
+.submit-btn-ft:hover .icon-send-ft,
+.submit-btn-ft:focus .icon-send-ft {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  animation-name: pulse;
+  animation-duration: 2500ms;
+}
+
 /* =================== end of css ================== */
