--- a/css/main.css
+++ b/css/main.css
@@ -351,6 +351,18 @@ img {
   }
 }
 
+#map_container {
+  position: relative;
+  padding-top: 50%;
+}
+
+#map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+
 .logo {
   color: var(--accent-color);
   font-family: var(--secondary-font);
