--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -17,3 +17,15 @@
         width: 1200px;
     }
 }
+
+#map_container {
+    position: relative;
+    padding-top: 50%;
+}
+
+#map {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
