customie gm icon

--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -21,6 +21,8 @@
 #map_container {
     position: relative;
     padding-top: 50%;
+    overflow: hidden;
+    height: 0;
 }
 
 #map {
@@ -28,4 +30,5 @@
     width: 100%;
     height: 100%;
     top: 0;
+    left: 0;
 }
