--- a/css/main.css
+++ b/css/main.css
@@ -354,6 +354,8 @@ img {
 #map_container {
   position: relative;
   padding-top: 50%;
+  overflow: hidden;
+  height: 0;
 }
 
 #map {
@@ -361,6 +363,7 @@ img {
   width: 100%;
   height: 100%;
   top: 0;
+  left: 0;
 }
 
 .logo {
